--- a/Wikipedia/Code/ScrollableEducationPanelView.xib
+++ b/Wikipedia/Code/ScrollableEducationPanelView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,6 +20,7 @@
                 <outlet property="inlineActionButtonContainerView" destination="8tf-7a-eXe" id="LrL-ba-Bmb"/>
                 <outlet property="inlineCloseButton" destination="BAe-h0-y6b" id="pFf-lE-gc6"/>
                 <outlet property="inlineCloseButtonStackView" destination="Evj-R4-67a" id="Jxf-XH-9AE"/>
+                <outlet property="inlineOptionalButton" destination="GvV-uu-dQu" id="9eW-PX-U2l"/>
                 <outlet property="inlinePrimaryButton" destination="cUm-ox-sR8" id="qTB-br-DAp"/>
                 <outlet property="inlineSecondaryButton" destination="hB2-ah-QwX" id="qKA-ng-WZB"/>
                 <outlet property="pinnedActionButtonContainerView" destination="3hr-CH-OgV" id="zwG-PG-2bK"/>
@@ -43,16 +44,16 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qtK-Db-J92" userLabel="Rounded Corner Container">
-                    <rect key="frame" x="9" y="0.0" width="280" height="529"/>
+                    <rect key="frame" x="9" y="20" width="280" height="489"/>
                     <subviews>
                         <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6JR-s8-77s">
-                            <rect key="frame" x="0.0" y="0.0" width="280" height="529"/>
+                            <rect key="frame" x="0.0" y="0.0" width="280" height="489"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BhM-b3-oKp" userLabel="Scroll Container">
-                                    <rect key="frame" x="0.0" y="0.0" width="280" height="532"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="280" height="570"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="1lp-Zw-jU3">
-                                            <rect key="frame" x="0.0" y="30" width="280" height="472"/>
+                                            <rect key="frame" x="0.0" y="30" width="280" height="510"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="Evj-R4-67a" userLabel="Inline Close Button Stack View">
                                                     <rect key="frame" x="0.0" y="0.0" width="280" height="15"/>
@@ -71,7 +72,7 @@
                                                     </subviews>
                                                 </stackView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="zdf-Q2-cLc">
-                                                    <rect key="frame" x="0.0" y="18" width="280" height="454"/>
+                                                    <rect key="frame" x="0.0" y="18" width="280" height="492"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" tag="2" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="places-auth-arrow" translatesAutoresizingMaskIntoConstraints="NO" id="rFJ-kb-kte">
                                                             <rect key="frame" x="15" y="0.0" width="250" height="95"/>
@@ -104,13 +105,13 @@
                                                             </constraints>
                                                         </view>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8tf-7a-eXe" userLabel="Inline Action Button Container View">
-                                                            <rect key="frame" x="15" y="293.5" width="250" height="76.5"/>
+                                                            <rect key="frame" x="15" y="293.5" width="250" height="114.5"/>
                                                             <subviews>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="hqs-XP-LEE">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="250" height="76.5"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="250" height="114.5"/>
                                                                     <subviews>
                                                                         <button opaque="NO" tag="5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cUm-ox-sR8" customClass="AutoLayoutSafeMultiLineButton" customModule="Wikipedia" customModuleProvider="target">
-                                                                            <rect key="frame" x="0.0" y="0.0" width="250" height="46.5"/>
+                                                                            <rect key="frame" x="0.0" y="0.0" width="250" height="33"/>
                                                                             <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                                             <inset key="titleEdgeInsets" minX="14" minY="10" maxX="14" maxY="10"/>
                                                                             <userDefinedRuntimeAttributes>
@@ -129,7 +130,7 @@
                                                                             </connections>
                                                                         </button>
                                                                         <button opaque="NO" tag="6" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hB2-ah-QwX" customClass="AutoLayoutSafeMultiLineButton" customModule="Wikipedia" customModuleProvider="target">
-                                                                            <rect key="frame" x="0.0" y="56.5" width="250" height="20"/>
+                                                                            <rect key="frame" x="0.0" y="43" width="250" height="27"/>
                                                                             <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                                             <inset key="titleEdgeInsets" minX="14" minY="10" maxX="14" maxY="10"/>
                                                                             <userDefinedRuntimeAttributes>
@@ -144,6 +145,14 @@
                                                                                 <action selector="secondaryButtonTapped:" destination="-1" eventType="touchUpInside" id="TWe-gh-Z12"/>
                                                                             </connections>
                                                                         </button>
+                                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GvV-uu-dQu">
+                                                                            <rect key="frame" x="0.0" y="80" width="250" height="34.5"/>
+                                                                            <state key="normal" title="Button"/>
+                                                                            <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                                                            <connections>
+                                                                                <action selector="optionalButtonTapped:" destination="-1" eventType="touchUpInside" id="oLI-1r-uei"/>
+                                                                            </connections>
+                                                                        </button>
                                                                     </subviews>
                                                                 </stackView>
                                                             </subviews>
@@ -155,7 +164,7 @@
                                                             </constraints>
                                                         </view>
                                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="This is a reasonably long sample DESCRIPTION for this panel. It is probably the best thing ever." textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="jJo-Ko-Gi1">
-                                                            <rect key="frame" x="15" y="384" width="250" height="70"/>
+                                                            <rect key="frame" x="15" y="422" width="250" height="70"/>
                                                             <color key="textColor" systemColor="labelColor"/>
                                                             <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
                                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -206,13 +215,13 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3hr-CH-OgV" userLabel="Pinned Action Button Container View">
-                                    <rect key="frame" x="15" y="449" width="250" height="80"/>
+                                    <rect key="frame" x="15" y="389" width="250" height="100"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="nMH-Tf-8g1">
-                                            <rect key="frame" x="0.0" y="0.0" width="250" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="250" height="70"/>
                                             <subviews>
                                                 <button opaque="NO" tag="5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="tailTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HGY-CD-FTJ" customClass="AutoLayoutSafeMultiLineButton" customModule="Wikipedia" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="0.0" width="250" height="20"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="250" height="33"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                     <inset key="titleEdgeInsets" minX="14" minY="10" maxX="14" maxY="10"/>
                                                     <userDefinedRuntimeAttributes>
@@ -231,7 +240,7 @@
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" tag="6" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lj0-nN-ABj" customClass="AutoLayoutSafeMultiLineButton" customModule="Wikipedia" customModuleProvider="target">
-                                                    <rect key="frame" x="0.0" y="30" width="250" height="20"/>
+                                                    <rect key="frame" x="0.0" y="43" width="250" height="27"/>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
                                                     <inset key="titleEdgeInsets" minX="14" minY="10" maxX="14" maxY="10"/>
                                                     <userDefinedRuntimeAttributes>
@@ -313,23 +322,23 @@
     </objects>
     <designables>
         <designable name="HGY-CD-FTJ">
-            <size key="intrinsicContentSize" width="28" height="20"/>
+            <size key="intrinsicContentSize" width="30" height="33"/>
         </designable>
         <designable name="cUm-ox-sR8">
-            <size key="intrinsicContentSize" width="28" height="20"/>
+            <size key="intrinsicContentSize" width="30" height="33"/>
         </designable>
         <designable name="hB2-ah-QwX">
-            <size key="intrinsicContentSize" width="28" height="20"/>
+            <size key="intrinsicContentSize" width="30" height="27"/>
         </designable>
         <designable name="lj0-nN-ABj">
-            <size key="intrinsicContentSize" width="28" height="20"/>
+            <size key="intrinsicContentSize" width="30" height="27"/>
         </designable>
     </designables>
     <resources>
         <image name="places-auth-arrow" width="193" height="193"/>
         <image name="places-auth-close" width="11" height="11"/>
         <systemColor name="labelColor">
-            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
